--- a/index.html
+++ b/index.html
@@ -5,4 +5,18 @@
   <meta name="description" content="Web site created using create-react-app"/>
   <link rel="apple-touch-icon" href="/txt_format/logo192.png"/>
   <link rel="manifest" href="/txt_format/manifest.json"/>
-  <title>txt Formatter</title><script defer="defer" src="/txt_format/static/js/main.1ae698e3.js"></script><link href="/txt_format/static/css/main.9a30a7aa.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+  <title>txt Formatter</title>
+  <style>
+    .box::-webkit-scrollbar {
+  width: 5px;
+}
+ 
+.box::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+ 
+.box::-webkit-scrollbar-thumb {
+  background: #888;
+}
+  </style>
+  <script defer="defer" src="/txt_format/static/js/main.1ae698e3.js"></script><link href="/txt_format/static/css/main.9a30a7aa.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
