--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html><html lang="en"><head><meta charset="utf-8"/>
-  <link rel="favicon" href="favicon.png"/>
+  <link rel="shortcut icon" href="favicon.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <meta name="theme-color" content="#000000"/>
   <meta name="description" content="Web site created using create-react-app"/>
